frontend/test/should_fail/array_med_exec.grg
using array_model_001b;

test td(var x:double, var y:double)
{
}

rule med {
	a:A;

	modify {
	---
		exec(td(array<string>["1","2"].med(), a.niceArray.med()));
	}
}
